--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,26 +5,14 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "Paper"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Research"
+    url: /research/
         
   - title: "Blog Posts"
     url: /year-archive/
     
   - title: "CV"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
-
-  - title: "Research"
-    url: /research/
