--- a/_config.yml
+++ b/_config.yml
@@ -300,7 +300,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
-
+ # _Papers
+  - scope:
+      path: ""
+      type: papers
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 # Sass/SCSS
 sass:
