--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
   - title: "Research"
     url: /research/
         
-  - title: "Academic Services"
+  - title: "University Services"
     url: /post/
     
   - title: "CV"
