--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # "https://www.linkedin.com/in/yiru-shi-025b3b30a/"
+  linkedin         : #
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
